[gd_scene load_steps=6 format=3 uid="uid://b3hl84xse03ke"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_b44pg"]
[ext_resource type="Texture2D" uid="uid://b6fylk5bvs5bb" path="res://art/shadow.png" id="1_mcoii"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f1vbk"]
radius = 4.0
height = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_eqmup"]
radius = 30.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j4jsa"]
radius = 5.0
height = 26.0

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
collision_mask = 256
script = ExtResource("1_b44pg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_f1vbk")

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(0, -14)
enabled = false
zoom = Vector2(0.5, 0.5)
position_smoothing_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_mcoii")
offset = Vector2(0, -14)

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(0, -12)
collision_layer = 0
collision_mask = 16
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_eqmup")
disabled = true

[node name="HitboxArea" type="Area2D" parent="."]
position = Vector2(0, -12)
collision_mask = 0
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxArea"]
shape = SubResource("CapsuleShape2D_j4jsa")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true
